tests/fixtures/stl/errors/test_unexpected_token.stl
// Error: unexpected token in field definition
prompt broken {
  is {
    name is ??? ;
  }
}
export broken as main;
